Opened 10 years ago
Closed 10 years ago
#11291 closed bug (fixed)
[PATCH] Fix mismatching alloc/deallocs in ResourceUsageWindow
Reported by: | Lioncash | Owned by: | nobody |
---|---|---|---|
Priority: | low | Milestone: | R1 |
Component: | Applications/Devices | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Attachments (1)
Change History (3)
by , 10 years ago
Attachment: | mismatches.patch added |
---|
comment:1 by , 10 years ago
patch: | 0 → 1 |
---|
comment:2 by , 10 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Applied in hrev47926. Thanks!