ResourceUsageWindow: Fix mismatching alloc/deallocs

* Fixes #11291.

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>